Fix header layout shift (#7025)

--- a/web/html/src/branding/css/uyuni/header.less
+++ b/web/html/src/branding/css/uyuni/header.less
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding: 0 !important;
+  height: 29px;
 }
 
 .navbar-header {
